# cbase

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  TODO.md  build-macosx.sh  build.sh  cbase_config.h.in  clang-format-11  config.h.in  conventions.md  data_and_arrays.md  deps.md  gen_gcov.sh  install.sh  meson.build  meson_options.txt  reorg.md  slices.md  test.sh
checked_math/: TODO.md  checked_signed_add.c  checked_signed_add.h  checked_signed_mul.c  checked_signed_mul.h  checked_signed_sub.c  checked_signed_sub.h  checked_unsigned_add.c  checked_unsigned_add.h  checked_unsigned_mul.c  checked_unsigned_mul.h  checked_unsigned_sub.c  checked_unsigned_sub.h  main.c  rand.c  rand.h  regehr_checked_add.c  results.md  run_benchmarks.sh  run_tests.sh  signed_add_benchmarks.c  signed_add_benchmarks.h  signed_add_tests.c  signed_add_tests.h  signed_mul_tests.c  signed_mul_tests.h  signed_sub_tests.c  signed_sub_tests.h  testing.h  timing.c  timing.h  unsigned_add_benchmarks.c  unsigned_add_benchmarks.h  unsigned_add_tests.c  unsigned_add_tests.h  unsigned_mul_tests.c  unsigned_mul_tests.h  unsigned_sub_tests.c  unsigned_sub_tests.h  winners.c  (+1 more)
cmake/modules/: FindCmocka.cmake  FindIconv.cmake
doc/: array.md  data.md
src/: alloc.c  alloc.h  array.c  array.h  buffer.c  buffer.h  cbase.h  charset.c  decimal.c  errors.c  errors.h  file-win.c  file.c  hash.c  hash.h  list.c  list.h  log.c  log.h  parray.c  parray.h  rune.c  rune.h  saved-str.c  sbuffer.c  slice.c  slice.h  sslice.c  status.c  status.h  str.c  str.h  strbase.c  table.c  utf8.c  utf8.h  util.c  xxhash.c
src/cbase/: all.h  alloc.h  array.h  array_base.h  array_dynamic_management.h  array_dynamic_mutations.h  array_management.h  array_mutations.h  array_ownership_management.h  array_slice.h  array_slice_management.h  array_slice_mutations.h  array_static_management.h  array_static_mutations.h  astr.h  buffer.h  cbase_log.h  charset.h  checked_math.h  checks.h  common_array.h  common_data.h  common_slice.h  data.h  data_base.h  data_dynamic_management.h  data_dynamic_mutations.h  data_management.h  data_mutations.h  data_ownership_management.h  data_slice.h  data_slice_management.h  data_slice_mutations.h  data_static_management.h  data_static_mutations.h  decimal.h  default_log.h  dlist.h  dynamic_array.h  dynamic_data.h  (+33 more)
subprojects/: cmocka.wrap
test/: alloc.c  array.c  array.h  cbase_test.h  charset.c  dlist.c  dlist.h  list.c  list.h  main.c  parray.c  path.c  sslice.c  status.c  str.c  table.c  table.h  utf8.c
